roles/metrics/files/metrics.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: metrics

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: metrics
  name: metrics-service
  namespace: metrics
spec:
  ports:
  - name: grafana
    port: 3000
    targetPort: 3000
  - name: vmware_exporter
    port: 9272
    targetPort: 9272
  selector:
    app: metrics

---

apiVersion: v1
kind: Deployment
metadata:
  labels:
    app: metrics
  name: metrics
spec:
  containers:
  - image: docker.io/grafana/grafana:9.0.1
    name: grafana
    ports:
    - containerPort: 3000
    # resources: {}
    # securityContext:
    #   capabilities:
    #     drop:
    #     - CAP_MKNOD
    #     - CAP_AUDIT_WRITE
    volumeMounts:
    - mountPath: /var/lib/grafana
      name: grafana_data-pvc
    - mountPath: /etc/grafana
      name: grafana_config-pvc
  - image: docker.io/pryorda/vmware_exporter:v0.18.3
    name: vmware_exporter
    ports:
    - containerPort: 9272
    # resources: {}
    # securityContext:
    #   capabilities:
    #     drop:
    #     - CAP_MKNOD
    #     - CAP_AUDIT_WRITE
  volumes:
  - name: grafana_data-pvc
    persistentVolumeClaim:
      claimName: longhorn-grafana_data-pvc
  - name: grafana_config-pvc
    persistentVolumeClaim:
      claimName: longhorn-grafana_config-pvc
# status: {}
